@@ -1,0 +1,38 @@
+/**
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package org.apache.avro.file;
+
+/**
+ * Constants used in data files.
+ */
+class DataFileConstants {
+  public static final byte VERSION = 0;
+  public static final byte[] MAGIC = new byte[] {
+    (byte)'O', (byte)'b', (byte)'j', VERSION
+  };
+  public static final long FOOTER_BLOCK = -1;
+  public static final int SYNC_SIZE = 16;
+  public static final int SYNC_INTERVAL = 1000*SYNC_SIZE; 
+
+  public static final String SCHEMA = "schema";
+  public static final String SYNC = "sync";
+  public static final String COUNT = "count";
+  public static final String CODEC = "codec";
+  public static final String NULL_CODEC = "null";
+}
